[package]
name = "lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5"
tokio = { version = "1.17.0", features = ["full"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
env_logger = "0.9.0"